[gd_scene load_steps=25 format=3 uid="uid://d05837hkn4w8x"]

[ext_resource type="Script" path="res://World/Spawners/AsteroidSpawner.gd" id="1"]
[ext_resource type="Script" path="res://World/Spawners/StationSpawner.gd" id="2"]
[ext_resource type="PackedScene" path="res://Ships/Enemies/Pirate/PirateShip.tscn" id="3"]
[ext_resource type="PackedScene" path="res://World/DockingPoint/Station.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Ships/Player/PlayerShip.tscn" id="5"]
[ext_resource type="PackedScene" path="res://UI/Minimap/MapView.tscn" id="6"]
[ext_resource type="Script" path="res://World/GameInitializer.gd" id="7"]
[ext_resource type="PackedScene" path="res://VFX/BackgroundStars.tscn" id="8"]
[ext_resource type="PackedScene" path="res://UI/Minimap/MapDisplay.tscn" id="10"]
[ext_resource type="Texture2D" uid="uid://dai2fgi1t1ke2" path="res://Main/white.png" id="11"]
[ext_resource type="PackedScene" path="res://World/ShakingCamera.tscn" id="12"]
[ext_resource type="Shader" path="res://VFX/Shaders/distorted_view.gdshader" id="13"]
[ext_resource type="Script" path="res://World/GameWorld.gd" id="14"]
[ext_resource type="Script" path="res://World/Spawners/PirateSpawner.gd" id="15"]
[ext_resource type="PackedScene" path="res://UI/Menus/Upgrades/UpgradeMenu.tscn" id="16"]
[ext_resource type="Script" path="res://UI/UI.gd" id="17"]
[ext_resource type="PackedScene" path="res://UI/Menus/QuitMenu.tscn" id="18"]
[ext_resource type="PackedScene" path="res://UI/ScreenFader.tscn" id="19"]
[ext_resource type="PackedScene" path="res://VFX/DistortMaskView.tscn" id="20"]
[ext_resource type="Script" path="res://VFX/PostProcessGameView.gd" id="21"]
[ext_resource type="PackedScene" path="res://UI/HUD/HUD.tscn" id="22"]

[sub_resource type="ViewportTexture" id="1"]
viewport_path = NodePath("MapView/SubViewport")

[sub_resource type="ShaderMaterial" id="3"]
resource_local_to_scene = true
shader = ExtResource("13")

[sub_resource type="Environment" id="4"]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0

[node name="GameInitializer" type="Node"]
script = ExtResource("7")

[node name="GameWorld" type="Node2D" parent="."]
script = ExtResource("14")
radius = 3000.0
iron_amount_balance_level = 750.0
refresh_threshold_range = 350.0

[node name="BackgroundStars" parent="GameWorld" instance=ExtResource("8")]

[node name="Camera3D" parent="GameWorld" instance=ExtResource("12")]

[node name="StationSpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("2")
Station = ExtResource("4")

[node name="PlayerShip" parent="GameWorld/StationSpawner" instance=ExtResource("5")]

[node name="AsteroidSpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("1")

[node name="PirateSpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("15")
PirateScene = ExtResource("3")
spawn_radius = 350.0

[node name="MapView" parent="." instance=ExtResource("6")]
anchors_preset = 15
mouse_filter = 2

[node name="SubViewport" parent="MapView" index="0"]
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="BlackBackground" parent="MapView/SubViewport/CanvasLayer" index="0"]
anchors_preset = 15
mouse_filter = 2
expand_mode = 1

[node name="DistortMaskView" parent="." instance=ExtResource("20")]
anchors_preset = 15
mouse_filter = 2

[node name="SubViewport" parent="DistortMaskView" index="0"]
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="BlackBackground" parent="DistortMaskView/SubViewport/CanvasLayer" index="0"]
anchors_preset = 15
mouse_filter = 2
expand_mode = 1

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 2
layer = 2
script = ExtResource("17")

[node name="HUD" parent="UI" instance=ExtResource("22")]
layout_mode = 3
anchors_preset = 15
mouse_filter = 2

[node name="MapDisplay" parent="UI" instance=ExtResource("10")]
process_mode = 1
anchors_preset = 15
texture = SubResource("1")
expand_mode = 1
flip_v = true

[node name="UpgradeUI" parent="UI" instance=ExtResource("16")]
visible = false
layout_mode = 3
anchors_preset = 15
mouse_filter = 2

[node name="ScreenFader" parent="UI" instance=ExtResource("19")]
anchors_preset = 15
expand_mode = 1

[node name="QuitMenu" parent="UI" instance=ExtResource("18")]
visible = false
anchors_preset = 8
mouse_filter = 2

[node name="PostProcessedLayer" type="CanvasLayer" parent="."]

[node name="GameView" type="TextureRect" parent="PostProcessedLayer"]
visible = false
material = SubResource("3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("11")
expand_mode = 1
stretch_mode = 1
flip_v = true
script = ExtResource("21")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("4")

[editable path="MapView"]
[editable path="DistortMaskView"]
